=== SVN

* Implemented experimental informix adapter.

=== 0.3.4.1 (2007-11-10)

* Changed Dataset#select_sql to support queries without a FROM clause.

=== 0.3.4 (2007-11-10)

* Fixed MySQL adapter to allow calling stored procedures (thanks Sebastian).

* Changed Dataset#each to always return self.

* Fixed SQL functions without arguments in block filters.

* Implemented super-cool Symbol#cast_as method.

* Fixed error message in command-line tool if failed to load adapter (#85).

* Refactored code relating to column references for better extendibility (#88).

* Tiny fix to Model#run_hooks.

=== 0.3.3 (2007-11-04)

* Revised code to generate SQL statements without trailing semicolons.

* Added Sequel::Worker implementation of a simple worker thread for asynchronous execution.

* Added spec for Oracle adapter.

* Fixed Oracle adapter to format INSERT statements without semicolons (thanks Liming Lian).

* Renamed alias to Array#keys as Array#columns instead of Array#fields.

* Renamed FieldCompositionMethods as ColumnCompositionMethods.

* Implemented Sequel::NumericExtensions to provide stuff like 30.days.ago.

=== 0.3.2 (2007-11-01)

* Added #to_column_name as alias to #to_field_name, #column_title as alias to #field_title.

* Added Dataset#interval method for getting interval between minimum/maximum values for a column.

* Fixed Oracle::Database#execute (#84).

* Added group_and_count as general implementation for count_by_xxx.

* Added count_by magic method.

* Added Dataset#range method for getting the minimum/maximum values for a column.

* Fixed timestamp translation in SQLite adapter (#83).

* Experimental DB2 adapter.

* Added Dataset#set as alias to Dataset#update.

* Removed long deprecated expressions.rb code.

* Better documentation.

* Implemented Dataset magic methods: order_by_xxx, group_by_xxx, filter_by_xxx, all_by_xxx, first_by_xxx, last_by_xxx.

* Changed Model.create and Model.new to accept a block.

=== 0.3.1 (2007-10-30)

* Typo fixes (#79).
